# tdo-notify

./: Cargo.toml  LICENSE  README.md
src/: checking.rs  lib.rs  mail.rs  mailing.rs  main.rs  settings.rs  util.rs
