[package]
name = "tdo-notify"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "h4llow3En <mail@felixdoering.com>"]

[dependencies]
tdo_core = { git = 'https://github.com/tdolist/tdo_core' }
lettre = "0.6.1"
base64 = "0.3.0"
libc = "0.2"
serde = "0.9.5"
serde_json = "0.9.4"
serde_derive = "0.9.5"
