[package]
name = "tdo-notify"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Felix Döring <development@felixdoering.com>"]

[dependencies]
tdo-core = "0.1.1"
tdo-export = "0.1.2"
lettre = "0.6.1"
base64 = "0.3.0"
libc = "0.2"
serde = "0.9.11"
serde_json = "0.9.9"
serde_derive = "0.9.11"
